--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,434 @@
-body {
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+  /* dark shades of primary color*/
+  --clr-primary-1: hsl(205, 86%, 17%);
+  --clr-primary-2: hsl(205, 77%, 27%);
+  --clr-primary-3: hsl(205, 72%, 37%);
+  --clr-primary-4: hsl(205, 63%, 48%);
+  /* primary/main color */
+  --clr-primary-5: hsl(205, 78%, 60%);
+  /* lighter shades of primary color */
+  --clr-primary-6: hsl(205, 89%, 70%);
+  --clr-primary-7: hsl(205, 90%, 76%);
+  --clr-primary-8: hsl(205, 86%, 81%);
+  --clr-primary-9: hsl(205, 90%, 88%);
+  --clr-primary-10: hsl(205, 100%, 96%);
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-white: #fff;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-green-dark: hsl(125, 67%, 44%);
+  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-black: #222;
+  --transition: all 0.3s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --max-width: 1170px;
+  --fixed-width: 620px;
+}
+/*
+=============== 
+Global Styles
+===============
+*/
+
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--clr-grey-1);
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  margin-bottom: 1.25rem;
+  color: var(--clr-grey-5);
+}
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+}
+/*  global classes */
+
+/* section */
+.section {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: var(--max-width);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (min-width: 992px) {
+  .section {
+    width: 95vw;
+  }
+}
+
+/*
+=============== 
+Navbar
+===============
+*/
+nav {
+  background: var(--clr-white);
+  box-shadow: var(--light-shadow);
+}
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.nav-toggle {
+  font-size: 1.5rem;
+  color: var(--clr-primary-5);
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+}
+.nav-toggle:hover {
+  color: var(--clr-primary-1);
+  transform: rotate(90deg);
+}
+.logo {
+  height: 40px;
+}
+.links a {
+  color: var(--clr-grey-3);
+  font-size: 1rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  display: block;
+  padding: 0.5rem 1rem;
+  transition: var(--transition);
+}
+.links a:hover {
+  background: var(--clr-primary-8);
+  color: var(--clr-primary-5);
+  padding-left: 1.5rem;
+}
+.social-icons {
+  display: none;
+}
+.links-container {
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+.show-container {
+  height: 10rem;
+}
+
+.page-header {
+  text-align: center;
+  margin: 1rem;
+}
+
+.my-img {
+  border-radius: 5%;
+  margin-right: 5%;
+}
+
+.word-box {
+  /* font-size: 26px; */
+  margin: 2.5rem 3rem 2rem 3rem;
+  padding: 1rem 2rem 0.5rem 2rem;
+  height: 30rem;
+  width: 40%;
+  border-radius: 1rem;
+  text-align: left;
+  float: left;
+
+  /* box-shadow from https://getcssscan.com/ */
+  /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+  /* other less intense option box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+}
+
+.image-box {
+  height: 25rem;
+  width: 50%;
+  text-align: left;
+  float: right;
+}
+
+.text-1 {
+  color: black;
+  font-weight: 500;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.text-2 {
+  color: var(--clr-grey-7);
+  font-size: 18px;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.text-3 {
+  color: var(--clr-grey-7);
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.title {
+  margin: 1rem 1rem 0.2rem;
+  color: var(--clr-primary-10);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 38px;
+}
+
+.mini-post {
+  float: left;
+  margin: 2% 0% 5% 2%;
+}
+
+.mini-post-img {
+  margin-right: 0.9rem;
+  margin-top: 2%;
+  float: left;
+  width: 200px;
+  height: 200px;
+  box-shadow: rgb(7, 9, 12) 0px 20px 30px -10px;
+  border-radius: 2%;
+}
+
+.mini-post-img-large {
+  margin-top: 2%;
+  margin-right: 0.9rem;
+  float: left;
+  width: 300px;
+  height: 300px;
+  box-shadow: rgb(7, 9, 12) 0px 20px 30px -10px;
+  border-radius: 2%;
+}
+
+.mini-post-text {
+  float: left;
+  width: 180px;
+}
+
+.project-img {
+  margin: 2% 2rem 2rem 8%;
+  float: left;
+  width: 30rem;
+  height: 30rem;
+  border-radius: 2%;
+  position: absolute;
+}
+
+.project-media {
+  /* background-color: gray; */
+  border-radius: 2%;
+  padding-top: 0.35%;
+  padding-right: 0.5%;
+  margin: 15% 2rem 2rem 12.5%;
+  position: absolute;
+  float: left;
+}
+
+.project-media-content {
+  margin-left: 0.4rem;
+  width: 10rem;
+  height: 10rem;
+}
+
+.project-expanded-content {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
+  display: block;
+}
+
+.project-video {
+  width: 38rem;
+  height: 35rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.btn {
+  margin-right: 1%;
+  margin-top: 1%;
+
+  border: none;
+  float: right;
+  background-color: #eeeeee;
+  color: var(--clr-primary-8);
+}
+
+.blog-name {
+  color: #fff;
+  font-size: 30px;
+  font-family: "Courier";
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 6%;
+  text-align: center;
+  display: block;
+}
+
+.blog-image {
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+  width: 400px;
+  margin-top: 1%;
+  text-align: center;
+  display: block;
+  border-radius: 2%;
+}
+
+.blog-text {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  margin-top: 1%;
+  text-align: center;
+  display: block;
+  border-radius: 2%;
+}
+
+.blog-post-container {
+  color: #eeeeee;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.blog-paragraph {
+  font-weight: bold;
+  font-size: 110%;
+  margin-top: 3rem;
+}
+
+.link {
+  color: var(--clr-primary-8);
+}
+
+.contact {
+  color: var(--clr-primary-1);
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+  }
+  .nav-header {
+    padding: 0;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .links-container {
+    height: auto !important;
+  }
+  .links {
+    display: flex;
+  }
+  .links a {
+    padding: 0;
+    margin: 0 0.5rem;
+  }
+  .links a:hover {
+    padding: 0;
+    background: transparent;
+  }
+  .social-icons {
+    display: flex;
+  }
+  .social-icons a {
+    margin: 0 0.5rem;
+    color: var(--clr-primary-5);
+    transition: var(--transition);
+  }
+  .social-icons a:hover {
+    color: var(--clr-primary-7);
+  }
 }
